# batch-fnr

./: .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile.backend  Dockerfile.frontend  README.md  README_V15.md  api_wrapper.py  environment.yml  nginx.conf
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: release.yml
BatchFindAndReplaceV1/: version_info.txt
V1.5/: README.md  batch_find_and_replace_gui.py  main.py  requirements.txt  text_unifier_scaling_tool_gui.py
V1.5/config/: default_settings.yaml
V1.5/core/: __init__.py  application.py  autocad_bridge.py  geometry.py  plugin_manager.py  settings_manager.py
V1.5/plugins/: __init__.py  base_plugin.py
V1.5/resources/: README.md
backend/: Dockerfile  README_SIDECAR.md  app.py  requirements.txt
backend/core/: auth.py  business_logic.py  models.py  utils.py
backend/tests/: conftest.py  test_auth.py  test_endpoints.py
docs/: API.md  DEPLOYMENT.md
docs/codebase/: .codebase-scan.txt  ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: ipc.ts  (+2 more)
frontend/src-tauri/: Cargo.toml  README.md  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src-tauri/src/commands/: fnr.rs  mod.rs
processor/: BatchFnr.sln  Directory.Build.props
web-panel/: index.html  package.json
(+30 files in other folders)
