[package]
name = "batch-fnr"
version = "2.0.0"
description = "Chamber 19 Batch Find and Replace for AutoCAD DWG files"
edition = "2021"
rust-version = "1.77"

[lib]
name = "batch_fnr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-dialog = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "process", "sync"] }
walkdir = "2"
thiserror = "1"

[features]
# This feature is enabled when the Tauri CLI builds for production.
custom-protocol = ["tauri/custom-protocol"]
